crates/swc_ecma_parser/tests/test262-error-references/fail/9f5a6dae7645976a.js.stderr
error: Legacy octal escape is not permitted in strict mode
 --> $DIR/tests/test262-parser/fail/9f5a6dae7645976a.js:1:2
  |
1 | `\37`
  |  ^^

